--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,16 @@
   "proxy": "http://127.0.0.1:5000",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/styles": "^4.11.3",
+    "@reactchartjs/react-chart.js": "^1.0.0-rc.3",
     "@reduxjs/toolkit": "^1.5.0",
     "@stripe/react-stripe-js": "^1.3.0",
     "@stripe/stripe-js": "^1.13.1",
@@ -18,6 +24,8 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
+    "chart.js": "^3.1.0",
+    "classnames": "^2.3.1",
     "country-state-city": "^2.0.0",
     "js-cookie": "^2.2.1",
     "notistack": "^1.0.5",
